--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "prettier": "2.7.1",
     "typescript": "^4.8.2",
     "vite": "^3.0.9",
-    "vite-plugin-solid": "^2.3.0"
+    "vite-plugin-solid": "^2.3.0",
+    "vite-plugin-solid-svg": "^0.4.1"
   },
   "dependencies": {
     "@solidjs/router": "^0.4.3",
