--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@types/cytoscape": "^3.19.8",
+    "@types/cytoscape-fcose": "^2.1.0",
+    "@types/cytoscape-popper": "^2.0.0",
     "prettier": "2.7.1",
     "typescript": "^4.8.2",
     "vite": "^3.0.9",
@@ -18,6 +21,12 @@
   },
   "dependencies": {
     "@solidjs/router": "^0.4.3",
-    "solid-js": "^1.5.1"
+    "common-catalog-schema": "^0.3.0",
+    "cytoscape": "^3.23.0",
+    "cytoscape-fcose": "^2.1.0",
+    "cytoscape-popper": "^2.0.0",
+    "monaco-editor": "^0.34.0",
+    "solid-js": "^1.5.1",
+    "tippy.js": "^6.3.7"
   }
 }
